# docs/swagger.json
@@ -488,7 +488,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/api/user/login": {
             "post": {
                 "description": "Авторизует пользователя по логиню, паролю и отдаёт jwt токен для дальнейших запросов",
                 "consumes": [
@@ -519,7 +519,7 @@
                 }
             }
         },
-        "/auth/loguot": {
+        "/api/user/loguot": {
             "post": {
                 "description": "Выход из аккаунта",
                 "consumes": [
@@ -539,7 +539,7 @@
                 }
             }
         },
-        "/auth/sign_up": {
+        "/api/user/sign_up": {
             "post": {
                 "description": "Регистрация нового пользователя",
                 "consumes": [
